# pycounts_ag

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_ag/: __init__.py  pycounts_ag.py
tests/: test_pycounts_ag.py
