[tool.poetry]
name = "pycounts_ag"
version = "0.1.0"
description = "A package to count the number of words in a string."
authors = ["Arnaud Gueulette"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2"
matplotlib = ">=3.9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
